--- a/EhodVenteEnLigne/Views/Product/Create.cshtml
+++ b/EhodVenteEnLigne/Views/Product/Create.cshtml
@@ -4,25 +4,64 @@
     Layout = "_AdminLayout";
 }
 
-<div asp-validation-summary="All" class="text-danger"></div>
 <form asp-action="Create" method="post">
     <div class="mb-3 col-6">
-        <label>@Localizer["Name"]*:</label><input asp-for="Name" class="form-control" />
+        <label>@Localizer["Name"]*:</label>
+        <input asp-for="Name" class="form-control" />
+        @if (ViewData != null && ViewData.ModelState.ContainsKey("Name"))
+        {
+            foreach (var error in ViewData.ModelState["Name"].Errors)
+            {
+                <div class="text-danger">@error.ErrorMessage</div>
+            }
+        }
     </div>
     <div class="mb-3 col-4">
-        <label>@Localizer["Price"]*:</label><input asp-for="Price" class="form-control" />
+        <label>@Localizer["Price"]*:</label>
+        <input asp-for="Price" class="form-control" />
+        @if (ViewData != null && ViewData.ModelState.ContainsKey("Price"))
+        {
+            foreach (var error in ViewData.ModelState["Price"].Errors)
+            {
+                <div class="text-danger">@error.ErrorMessage</div>
+            }
+        }
     </div>
     <div class="mb-3 col-8">
-        <label>@Localizer["Description"]:</label><input asp-for="Description" class="form-control" />
+        <label>@Localizer["Description"]:</label>
+        <input asp-for="Description" class="form-control" />
+        @if (ViewData != null && ViewData.ModelState.ContainsKey("Description"))
+        {
+            foreach (var error in ViewData.ModelState["Description"].Errors)
+            {
+                <div class="text-danger">@error.ErrorMessage</div>
+            }
+        }
     </div>
     <div class="mb-3 col-4">
-        <label>@Localizer["Stock"]*:</label><input asp-for="Stock" type="text" class="form-control" />
+        <label>@Localizer["Stock"]*:</label>
+        <input asp-for="Stock" type="text" class="form-control" />
+        @if (ViewData != null && ViewData.ModelState.ContainsKey("Stock"))
+        {
+            foreach (var error in ViewData.ModelState["Stock"].Errors)
+            {
+                <div class="text-danger">@error.ErrorMessage</div>
+            }
+        }
     </div>
-    <div class="mb-3col-8">
-        <label>@Localizer["Details"]:</label><input asp-for="Details" class="form-control" />
+    <div class="mb-3 col-8">
+        <label>@Localizer["Details"]:</label>
+        <input asp-for="Details" class="form-control" />
+        @if (ViewData != null && ViewData.ModelState.ContainsKey("Details"))
+        {
+            foreach (var error in ViewData.ModelState["Details"].Errors)
+            {
+                <div class="text-danger">@error.ErrorMessage</div>
+            }
+        }
     </div>
+
     <div class="text-center">
         <input class="btn btn-primary" type="submit" value="@Localizer["OK"]" />
     </div>
 </form>
-
