--- a/EhodVenteEnLigne/Views/Shared/Components/LanguageSelector/Default.cshtml
+++ b/EhodVenteEnLigne/Views/Shared/Components/LanguageSelector/Default.cshtml
@@ -9,6 +9,7 @@
                 <option value="English">@Localizer["LanguageEnglish"]</option>
                 <option value="French">@Localizer["LanguageFrench"]</option>
                 <option value="Spanish">@Localizer["LanguageSpanish"]</option>
+                <option value="Spanish">@Localizer["LanguageWolof"]</option>
             </select>
         </div>
         <div class="col-md-2">
